WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
142058
bmalloc: Pathological madvise churn on the free(malloc(x)) benchmark
https://bugs.webkit.org/show_bug.cgi?id=142058
Summary
bmalloc: Pathological madvise churn on the free(malloc(x)) benchmark
Geoffrey Garen
Reported
2015-02-26 14:46:26 PST
bmalloc: Pathological madvise churn on the free(malloc(x)) benchmark
Attachments
Patch
(34.54 KB, patch)
2015-02-27 15:57 PST
,
Geoffrey Garen
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2015-02-27 15:57:21 PST
Created
attachment 247569
[details]
Patch
WebKit Commit Bot
Comment 2
2015-02-27 15:59:33 PST
Attachment 247569
[details]
did not pass style-queue: ERROR: Source/bmalloc/bmalloc/BoundaryTag.h:88: Please declare enum bitfields as unsigned integral types. [runtime/enum_bitfields] [5] Total errors found: 1 in 14 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andreas Kling
Comment 3
2015-02-27 16:18:27 PST
Comment on
attachment 247569
[details]
Patch r=me
Geoffrey Garen
Comment 4
2015-02-27 16:29:39 PST
Committed
r180797
: <
http://trac.webkit.org/changeset/180797
>
Ryosuke Niwa
Comment 5
2015-02-27 17:46:57 PST
Landed an EFL build fix in
https://trac.webkit.org/changeset/180805
.
Ryosuke Niwa
Comment 6
2015-02-27 17:53:36 PST
(In reply to
comment #5
)
> Landed an EFL build fix in
https://trac.webkit.org/changeset/180805
.
Oops, I had a typo. Fixed it in
https://trac.webkit.org/changeset/180806
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug